--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools = "http://schemas.android.com/tools"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_infoFragment"
@@ -18,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
+        tools:listitem="@layout/info_feed_items"
         />
 
 
