--- a/app/src/main/res/layout/info_feed_items.xml
+++ b/app/src/main/res/layout/info_feed_items.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+
+    android:layout_marginRight="@dimen/infoFeedItem_cardMargin"
+    android:layout_marginLeft="@dimen/infoFeedItem_cardMargin"
+    android:layout_marginTop="@dimen/infoFeedItem_cardMargin"
+    android:layout_marginBottom="@dimen/infoFeedItem_cardMargin"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="20dp"
-        >
+        android:padding="@dimen/infoFeedItem_padding">
 
         <!-- ImageView koji prikazuju ikonu reddita ukoliko se radi o postu s reddita ili ikonu za stazu koja se prikazuje
         kod svakog itema koji je staza-->
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageView_infoFeedItem"
 
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="@dimen/infoFeedItem_imageViewSize"
+            android:layout_height="@dimen/infoFeedItem_imageViewSize"
 
             android:src="@drawable/androidicon"
-            />
+            app:layout_constraintLeft_toLeftOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- Ovaj textview je gornji textview i sadrzi naslov posta s reddita/ime utrke-->
         <androidx.appcompat.widget.AppCompatTextView
@@ -33,16 +34,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            app:layout_constraintLeft_toRightOf="@id/imageView_infoFeedItem"
-            app:layout_constraintTop_toTopOf="@id/imageView_infoFeedItem"
-
             android:layout_marginLeft="@dimen/infoFeedItem_leftMarginFromPicutre"
-
             android:text="@string/infoFeedItem_topTextView"
-            android:textSize="@dimen/infoFeedItem_topTextSize"
+
             android:textColor="@color/primaryTextColor"
+
+            android:textSize="@dimen/infoFeedItem_topTextSize"
             android:textStyle="bold"
-            />
+            app:layout_constraintLeft_toRightOf="@id/imageView_infoFeedItem"
+            app:layout_constraintTop_toTopOf="@id/imageView_infoFeedItem" />
 
         <!-- Ovaj textview je bottom textview i sadrzi nekakav kratki opis posta s reddita (ili komentar)/
          tj. nekakav opis nadolazece utrke
@@ -52,18 +52,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            app:layout_constraintTop_toBottomOf="@id/topTextView_infoFeedItem"
-            app:layout_constraintLeft_toRightOf="@id/imageView_infoFeedItem"
-
             android:layout_marginLeft="@dimen/infoFeedItem_leftMarginFromPicutre"
-
             android:text="@string/infoFeedItem_bottomTextView"
-            android:textSize="@dimen/infoFeedItem_bottomTextSize"
-            android:textColor="@color/secondaryTextColor"
-            />
 
+            android:textColor="@color/secondaryTextColor"
+
+            android:textSize="@dimen/infoFeedItem_bottomTextSize"
+            app:layout_constraintLeft_toRightOf="@id/imageView_infoFeedItem"
+            app:layout_constraintTop_toBottomOf="@id/topTextView_infoFeedItem" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
