--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -4,12 +4,76 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/text_TextView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+
+
+
+    <EditText
+        android:id="@+id/yearInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="20dp"
+
+        android:inputType="number"
+        android:hint="Year"
         />
+
+
+    <EditText
+        android:id="@+id/circuitInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/yearInput"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        android:inputType="text"
+        android:hint="Circuit"
+        />
+
+
+    <EditText
+        android:id="@+id/driverInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/circuitInput"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        android:inputType="text"
+        android:hint="Driver"
+        />
+
+
+    <EditText
+        android:id="@+id/teamInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/driverInput"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        android:inputType="text"
+        android:hint="Team"
+        />
+
+    <Button
+        android:id="@+id/queryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/teamInput"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="15dp"
+
+        android:text="Query"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
