--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -15,9 +15,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="55dp"
 
         android:inputType="number"
+        android:textAlignment="center"
         android:hint="Year"
         />
 
@@ -32,6 +33,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
 
         android:inputType="text"
+        android:textAlignment="center"
         android:hint="Circuit"
         />
 
@@ -46,6 +48,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
 
         android:inputType="text"
+        android:textAlignment="center"
         android:hint="Driver"
         />
 
@@ -60,6 +63,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
 
         android:inputType="text"
+        android:textAlignment="center"
         android:hint="Team"
         />
 
