Functions for building team and circuit query added, differentiation between api call strings passed to new intent added, tested manipulating TableLayout through Kotlin for api call results displaying.

--- a/app/src/main/res/layout/statistics_results.xml
+++ b/app/src/main/res/layout/statistics_results.xml
@@ -27,4 +27,14 @@
         android:text="It's a trap"
         />
 
+    <TableLayout
+        android:id="@+id/dataTable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/testTextView"
+        />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
