Redesigned the way query results are shown, finished handling all the queries, added description for what each query requires. To do : info feed, notification before race.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name = "primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#707070</color>
+
+    <color name="cardViewBackgroundColor_queryInformation">#A3A3A3</color>
 </resources>
