--- a/app/src/main/res/layout/statistics_results.xml
+++ b/app/src/main/res/layout/statistics_results.xml
@@ -1,40 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".StatisticsResults">
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/testTextView"
+
+    <LinearLayout
+        android:id="@+id/leftSection"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="match_parent"
+        android:layout_toLeftOf="@+id/secondView"
+        android:orientation="vertical">
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        <!--<TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:text="TETESTETE"
+            android:textAlignment="center"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp" />    -->
 
-        android:background="#456124"
-        android:textColor="#ffffff"
-        />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    </LinearLayout>
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:text="It's a trap"
-        />
+    <View
+        android:id="@+id/secondView"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"/>
 
-    <TableLayout
-        android:id="@+id/dataTable"
+    <LinearLayout
+        android:id="@+id/rightSection"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/testTextView"
-        />
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@+id/secondView"
+        android:orientation="vertical">
 
+        <!--<TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
+            android:text="WOPWOP"
+            android:background="@color/colorPrimary"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_gravity="left"
+            android:layout_marginLeft="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BIPBI"
+            android:background="@color/colorPrimary"
+
+            android:layout_marginTop="5dp"
+            />  -->
+
+    </LinearLayout>
+
+</RelativeLayout>
+
+    <!--
+    Layout from :
+    https://stackoverflow.com/questions/3424904/how-to-split-the-screen-with-two-equal-linearlayouts -->
