Added final expandable query information card, info feed needs to be implemented. Testing best way to implement data pulling for info feed cards, cards for info feed redesigned (not yet implemented in layout file).

--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -20,8 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        tools:listitem="@layout/info_feed_items"
-        />
+        tools:listitem="@layout/info_feed_items"/>
+
 
 
 
