--- a/app/src/main/res/layout/info_feed_items.xml
+++ b/app/src/main/res/layout/info_feed_items.xml
@@ -2,13 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="150dp"
 
     android:layout_marginRight="@dimen/infoFeedItem_cardMargin"
     android:layout_marginLeft="@dimen/infoFeedItem_cardMargin"
     android:layout_marginTop="@dimen/infoFeedItem_cardMargin"
-    android:layout_marginBottom="@dimen/infoFeedItem_cardMargin"
-    >
+    android:layout_marginBottom="@dimen/infoFeedItem_cardMargin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,7 +22,7 @@
             android:layout_width="@dimen/infoFeedItem_imageViewSize"
             android:layout_height="@dimen/infoFeedItem_imageViewSize"
 
-            android:src="@drawable/androidicon"
+            android:src="@drawable/race_track_icon"
             app:layout_constraintLeft_toLeftOf="parent"
 
             app:layout_constraintTop_toTopOf="parent" />
@@ -60,6 +59,15 @@
             android:textSize="@dimen/infoFeedItem_bottomTextSize"
             app:layout_constraintLeft_toRightOf="@id/imageView_infoFeedItem"
             app:layout_constraintTop_toBottomOf="@id/topTextView_infoFeedItem" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TETETETEOIT"
+
+            app:layout_constraintTop_toBottomOf="@id/imageView_infoFeedItem"
+            android:layout_marginTop="15dp"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
