--- a/app/src/main/res/layout/info_feed_items.xml
+++ b/app/src/main/res/layout/info_feed_items.xml
@@ -61,14 +61,40 @@
             app:layout_constraintTop_toBottomOf="@id/topTextView_infoFeedItem" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
+            android:id="@+id/info1_textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TETETETEOIT"
+            android:text="@string/infoFeedItems_info1TextView"
 
             app:layout_constraintTop_toBottomOf="@id/imageView_infoFeedItem"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="15dp"
             />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/info2_textView"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toBottomOf="@id/info1_textView"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="6dp"
+
+            android:text="@string/infoFeedItems_info2TextView"
+            />
+
+        <Button
+            android:id="@+id/showCircuit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toBottomOf="@id/info1_textView"
+            app:layout_constraintBottom_toTopOf="@id/info2_textView"
+            app:layout_constraintRight_toRightOf="parent"
+
+            android:text="@string/infoFeedItems_showCoordinatesButton"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
