--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -16,11 +16,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="@dimen/fragmentTwo_firstEditTextTopMargin"
 
         android:inputType="number"
         android:textAlignment="center"
-        android:hint="Year"
+        android:hint="@string/editText_yearHint"
         />
 
 
@@ -35,7 +35,7 @@
 
         android:inputType="text"
         android:textAlignment="center"
-        android:hint="Circuit"
+        android:hint="@string/editText_circuitHint"
         />
 
 
@@ -50,7 +50,7 @@
 
         android:inputType="text"
         android:textAlignment="center"
-        android:hint="Driver"
+        android:hint="@string/editText_driverHint"
         />
 
 
@@ -65,7 +65,7 @@
 
         android:inputType="text"
         android:textAlignment="center"
-        android:hint="Team"
+        android:hint="@string/editText_teamHint"
         />
 
     <Button
@@ -272,6 +272,5 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
